# python-mcap-protobuf-support

./: Pipfile  README.md  pyproject.toml  setup.cfg
.github/workflows/: ci.yml
examples/: example.mcap  point_cloud_example.py  reading.py  reading_example.py  writing.py  writing_example.py
mcap_protobuf/: decoder.py  schema.py
tests/: Messages.fds  Messages.proto  Messages_pb2.py  SimpleMessage.out  complex_message.fds  generate.py  simple_message.fds  simple_pb2.py  test_decoder.py  test_writer.py
